# point-trace

./: .gitignore  README.md  config.toml  pyproject.toml
.github/workflows/: build-msi.yml
docs/: idea.md
installer/: point-trace.wxs
src/point_trace/: config.py  listener.py  main.py  overlay.py  store.py
